--- a/package.json
+++ b/package.json
@@ -12,7 +12,18 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:integration": "jest --config ./test/jest-integration.json",
+    "test:integration:watch": "jest --config ./test/jest-integration.json --watch",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:load": "k6 run test/load/otp-auth-load.js",
+    "test:load:rate-limit": "k6 run test/load/rate-limit-stress.js",
+    "test:load:concurrent": "k6 run test/load/concurrent-users.js",
+    "test:all": "npm run test && npm run test:integration && npm run test:e2e",
+    "docker:test:up": "docker-compose -f docker-compose.test.yml up -d",
+    "docker:test:down": "docker-compose -f docker-compose.test.yml down",
+    "docker:test:logs": "docker-compose -f docker-compose.test.yml logs -f",
     "cdk": "cdk",
     "cdk:deploy": "cdk deploy --all",
     "cdk:destroy": "cdk destroy --all",
@@ -51,10 +62,12 @@
     "@nestjs/cli": "^10.4.8",
     "@nestjs/schematics": "^10.1.4",
     "@nestjs/testing": "^10.4.15",
+    "@playwright/test": "^1.56.1",
     "@types/aws-lambda": "^8.10.157",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/k6": "^1.4.0",
     "@types/node": "^22.10.2",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.18.1",
@@ -62,8 +75,10 @@
     "aws-cdk": "^2.174.0",
     "eslint": "^9.17.0",
     "jest": "^29.7.0",
+    "k6": "^0.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
+    "testcontainers": "^11.8.1",
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
